# python-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
scripts/: bootstrap.sh  devserver.sh  rename_package.py
src/my_project/: cli.py
tests/unit/: test_cli.py
